  * On Linux: move init.d/console-setup.sh out of singe user mode.
    Closes: #796603, #816090.
  * Move the init scripts from keyboard-configuration to
    console-setup-linux and console-setup-freebsd.  Closes: #805928.
    Give them a .sh extension to make them sourcable.  Downgrade the
    dependency on initscripts to Recommends on FreeBSD and Suggests on
    Linux.  Closes: #804988.
  * bug-control: add systemd to the packages in the package-status list.
  * Put db_stop near the end of console-setup.postinst.  Redirect all
    output of setupcon to /dev/null.  Hopefully, this
    closes: #782753, #776101.
  * postinst: run update-rc.d with parameter 'defaults'. Closes: #722064.
  * keyboard-configuration.config: the Serbian keyboard layout is 'rs',
    not 'cs'.  For Bulgarian consider bg,bg as unsupported by Debconf.
    Thanks to Samuel Thibault for #778721 and #778722.
  * Remove Keyboard/locale/lib/ from the source package.  Closes: #787528
  * Make the builds reproducible.  Thanks to Reiner Herrmann for the
    patch.  Closes: #775531.

 -- Anton Zinoviev <zinoviev@debian.org>  Sat, 27 Feb 2016 19:28:22 +0300

console-setup (1.137) unstable; urgency=medium

  [ Anton Zinoviev ]
  * bug-control: add gnome-control-center to the packages in the
    package-status list as it modifies /etc/default/keyboard.

 -- Christian Perrier <bubulle@debian.org>  Mon, 22 Feb 2016 07:08:37 +0100

console-setup (1.136) unstable; urgency=medium

  [ Colin Watson ]
  * Use HTTPS for Vcs-* URLs, and link to cgit rather than gitweb.

 -- Christian Perrier <bubulle@debian.org>  Mon, 01 Feb 2016 06:56:04 +0100

console-setup (1.135) unstable; urgency=medium

  [ Updated translations ]
  * Swedish (sv.po) by Martin Bagge / brother

 -- Christian Perrier <bubulle@debian.org>  Thu, 28 Jan 2016 08:09:47 +0100

console-setup (1.134) unstable; urgency=medium

  [ Colin Watson ]
  * debian/keyboard-configuration.postinst: Test for the Hurd using uname